--- a/index.html
+++ b/index.html
@@ -70,6 +70,64 @@
     </div>
     <!-- navbar -->
 
+    <!-- hero -->
+    <section class="hero pt-[85px]">
+        <div class="container">
+            <h2 class="text-[48px] text-black font-bold ls-8">
+                為您的二手車
+            </h2>
+            <h2 class="text-[48px] text-[#F3A94D] font-bold ls-8 mb-[35px]">
+                交易保駕護航
+            </h2>
+            <a href="" class="bg-[#F3A94D] text-white rounded-[5px] px-[45px] py-[15px]  w-auto">
+                查看更多
+            </a>
+        </div>
+    </section>
+    <!-- hero -->
+
+    <!-- form -->
+    <section class="form">
+        <div class="container">
+            <div class="card shadow lg:w-[85%] w-full p-[25px] rounded-[10px] bg-white">
+                <div class="grid md:grid-cols-3 grid-cols-1 gap-[20px]">
+                    <div class="item">
+                        <label for="" class="font-bold text-black block mb-[13px]">
+                            車身類型
+                        </label>
+                        <input type="text" placeholder="輸入車身類型"
+                            class="grid-input w-full block px-[25px] py-[14px] placeholder:text-[#6E757C]" name=""
+                            id="">
+                    </div>
+                    <div class="item">
+                        <label for="" class="font-bold text-black block mb-[13px]">
+                            品牌
+                        </label>
+                        <input type="text" placeholder="尋找汽車品牌"
+                            class="grid-input w-full block px-[25px] py-[14px] placeholder:text-[#6E757C]" name=""
+                            id="">
+                    </div>
+                    <div class="item">
+                        <div class="flex gap-4 justify-between items-end">
+                            <div class="input w-full">
+                                <label for="" class="font-bold text-black block mb-[13px]">
+                                    品牌
+                                </label>
+                                <input type="text" placeholder="尋找汽車品牌"
+                                    class="grid-input w-full block px-[25px] py-[14px] placeholder:text-[#6E757C]"
+                                    name="" id="">
+                            </div>
+                            <a href="" class="bg-[#F3A94D] text-white rounded-[5px] px-[25px] py-[15px]  w-[180px]">
+                                查看更多
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- form -->
+
 
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
