--- a/index.html
+++ b/index.html
@@ -128,6 +128,39 @@
     </section>
     <!-- form -->
 
+    <!-- columns -->
+    <section class="columns py-[100px]">
+        <div class="container">
+            <div class="md:w-2/3 mx-auto grid md:grid-cols-2 grid-cols-1 gap-[85px]">
+                <div class="item text-center">
+                    <img src="img/img1.png" class="w-full mb-[25px]" alt="">
+                    <h2 class="text-[32px] font-bold text-black mb-[12px]">
+                        我想買車
+                    </h2>
+                    <p class="text-xl text-[#787878] mb-[35px]">
+                        智能匹配系統，為您推薦最符合需求的車輛。
+                    </p>
+                    <a href="" class="outline py-[14px] px-[45px]">
+                        查看更多
+                    </a>
+                </div>
+                <div class="item text-center">
+                    <img src="img/img2.png" class="w-full mb-[25px]" alt="">
+                    <h2 class="text-[32px] font-bold text-black mb-[12px]">
+                        我想賣車
+                    </h2>
+                    <p class="text-xl text-[#787878] mb-[35px]">
+                        買賣雙方自由協商，讓二手車出售更加公平。
+                    </p>
+                    <a href="" class="outline py-[14px] px-[45px]">
+                        查看更多
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- columns -->
+
 
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
