--- a/index.html
+++ b/index.html
@@ -162,6 +162,64 @@
     <!-- columns -->
 
 
+    <!-- brands -->
+    <section class="brands pb-[70px]">
+        <div class="container">
+            <div class="grid gap-[20px] lg:grid-cols-6 md:grid-cols-3 grid-cols-2">
+                <div class="brand-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/i1.png" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-[#1E1B2C]">
+                            BMW
+                        </p>
+                    </div>
+                </div>
+                <div class="brand-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/i2.png" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-[#1E1B2C]">
+                            Honda
+                        </p>
+                    </div>
+                </div>
+                <div class="brand-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/i3.png" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-[#1E1B2C]">
+                            Ford
+                        </p>
+                    </div>
+                </div>
+                <div class="brand-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/i4.png" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-[#1E1B2C]">
+                            Mitsubishi
+                        </p>
+                    </div>
+                </div>
+                <div class="brand-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/i5.png" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-[#1E1B2C]">
+                            Volkswagen
+                        </p>
+                    </div>
+                </div>
+                <div class="brand-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/i6.png" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-[#1E1B2C]">
+                            More
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- brands -->
+
+
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
