--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -218,6 +221,277 @@
         </div>
     </section>
     <!-- brands -->
+
+    <!-- products -->
+    <section class="products py-[60px] bg-[#F5F5F7]">
+        <div class="container">
+            <div class="text-center mb-[45px]">
+                <h2 class="text-[32px] font-[900] text-[#111]">
+                    熱門汽車
+                </h2>
+                <div class="line bg-[#F3A94D] w-[110px] h-[4px] mx-auto mt-[18px] mb-[28px]"></div>
+                <p class="w-[40%] text-lg mx-auto">
+                    我們提供安全可靠的交易保障，買賣雙方直接協商，確保交易公開透明、高效，並提供
+                </p>
+            </div>
+
+            <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-[22px]">
+                <div class="product-card bg-white rounded-[10px] p-[20px]">
+                    <div class="relative">
+                        <img src="img/car1.png" class="w-full" alt="">
+                        <div
+                            class="heart bg-[#F3A94D] absolute w-[42px] h-[42px] inline-flex justify-center items-center text-white rounded-full border-2 border-white">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                    </div>
+
+                    <div class="pt-[16px]">
+                        <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
+                            Lexus LS500 Premium V2
+                        </p>
+                    </div>
+
+                    <hr class="mb-[15px]">
+
+                    <div class="flex justify-between items-center">
+                        <div class="item w-full flex gap-[6px] justify-start items-center">
+                            <img src="img/flag.svg" alt="">
+                            2手
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-center items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-end items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                    </div>
+
+                    <div
+                        class="pricing bg-[#F5F5F7] rounded-[5px] px-[18px] py-[15px] mt-[22px] flex justify-between items-center">
+                        <span class="text-sm text-[#161616] font-[500]">
+                            HK$4,590/月
+                        </span>
+                        <span class="text-[24px] font-[800] text-[#D13333]">
+                            HK$758,000
+                        </span>
+                    </div>
+                </div>
+                <div class="product-card bg-white rounded-[10px] p-[20px]">
+                    <div class="relative">
+                        <img src="img/car2.png" class="w-full" alt="">
+                        <div
+                            class="heart bg-[#F3A94D] absolute w-[42px] h-[42px] inline-flex justify-center items-center text-white rounded-full border-2 border-white">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                    </div>
+
+                    <div class="pt-[16px]">
+                        <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
+                            Lexus LS500 Premium V2
+                        </p>
+                    </div>
+
+                    <hr class="mb-[15px]">
+
+                    <div class="flex justify-between items-center">
+                        <div class="item w-full flex gap-[6px] justify-start items-center">
+                            <img src="img/flag.svg" alt="">
+                            2手
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-center items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-end items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                    </div>
+
+                    <div
+                        class="pricing bg-[#F5F5F7] rounded-[5px] px-[18px] py-[15px] mt-[22px] flex justify-between items-center">
+                        <span class="text-sm text-[#161616] font-[500]">
+                            HK$4,590/月
+                        </span>
+                        <span class="text-[24px] font-[800] text-[#D13333]">
+                            HK$758,000
+                        </span>
+                    </div>
+                </div>
+                <div class="product-card bg-white rounded-[10px] p-[20px]">
+                    <div class="relative">
+                        <img src="img/car3.png" class="w-full" alt="">
+                        <div
+                            class="heart bg-[#F3A94D] absolute w-[42px] h-[42px] inline-flex justify-center items-center text-white rounded-full border-2 border-white">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                    </div>
+
+                    <div class="pt-[16px]">
+                        <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
+                            Lexus LS500 Premium V2
+                        </p>
+                    </div>
+
+                    <hr class="mb-[15px]">
+
+                    <div class="flex justify-between items-center">
+                        <div class="item w-full flex gap-[6px] justify-start items-center">
+                            <img src="img/flag.svg" alt="">
+                            2手
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-center items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-end items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                    </div>
+
+                    <div
+                        class="pricing bg-[#F5F5F7] rounded-[5px] px-[18px] py-[15px] mt-[22px] flex justify-between items-center">
+                        <span class="text-sm text-[#161616] font-[500]">
+                            HK$4,590/月
+                        </span>
+                        <span class="text-[24px] font-[800] text-[#D13333]">
+                            HK$758,000
+                        </span>
+                    </div>
+                </div>
+                <div class="product-card bg-white rounded-[10px] p-[20px]">
+                    <div class="relative">
+                        <img src="img/car4.png" class="w-full" alt="">
+                        <div
+                            class="heart bg-[#F3A94D] absolute w-[42px] h-[42px] inline-flex justify-center items-center text-white rounded-full border-2 border-white">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                    </div>
+
+                    <div class="pt-[16px]">
+                        <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
+                            Lexus LS500 Premium V2
+                        </p>
+                    </div>
+
+                    <hr class="mb-[15px]">
+
+                    <div class="flex justify-between items-center">
+                        <div class="item w-full flex gap-[6px] justify-start items-center">
+                            <img src="img/flag.svg" alt="">
+                            2手
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-center items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-end items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                    </div>
+
+                    <div
+                        class="pricing bg-[#F5F5F7] rounded-[5px] px-[18px] py-[15px] mt-[22px] flex justify-between items-center">
+                        <span class="text-sm text-[#161616] font-[500]">
+                            HK$4,590/月
+                        </span>
+                        <span class="text-[24px] font-[800] text-[#D13333]">
+                            HK$758,000
+                        </span>
+                    </div>
+                </div>
+                <div class="product-card bg-white rounded-[10px] p-[20px]">
+                    <div class="relative">
+                        <img src="img/car5.png" class="w-full" alt="">
+                        <div
+                            class="heart bg-[#F3A94D] absolute w-[42px] h-[42px] inline-flex justify-center items-center text-white rounded-full border-2 border-white">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                    </div>
+
+                    <div class="pt-[16px]">
+                        <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
+                            Lexus LS500 Premium V2
+                        </p>
+                    </div>
+
+                    <hr class="mb-[15px]">
+
+                    <div class="flex justify-between items-center">
+                        <div class="item w-full flex gap-[6px] justify-start items-center">
+                            <img src="img/flag.svg" alt="">
+                            2手
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-center items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-end items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                    </div>
+
+                    <div
+                        class="pricing bg-[#F5F5F7] rounded-[5px] px-[18px] py-[15px] mt-[22px] flex justify-between items-center">
+                        <span class="text-sm text-[#161616] font-[500]">
+                            HK$4,590/月
+                        </span>
+                        <span class="text-[24px] font-[800] text-[#D13333]">
+                            HK$758,000
+                        </span>
+                    </div>
+                </div>
+                <div class="product-card bg-white rounded-[10px] p-[20px]">
+                    <div class="relative">
+                        <img src="img/car2.png" class="w-full" alt="">
+                        <div
+                            class="heart bg-[#F3A94D] absolute w-[42px] h-[42px] inline-flex justify-center items-center text-white rounded-full border-2 border-white">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                    </div>
+
+                    <div class="pt-[16px]">
+                        <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
+                            Lexus LS500 Premium V2
+                        </p>
+                    </div>
+
+                    <hr class="mb-[15px]">
+
+                    <div class="flex justify-between items-center">
+                        <div class="item w-full flex gap-[6px] justify-start items-center">
+                            <img src="img/flag.svg" alt="">
+                            2手
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-center items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                        <div class="item w-full flex gap-[6px] justify-end items-center">
+                            <img src="img/calendar.svg" alt="">
+                            2021
+                        </div>
+                    </div>
+
+                    <div
+                        class="pricing bg-[#F5F5F7] rounded-[5px] px-[18px] py-[15px] mt-[22px] flex justify-between items-center">
+                        <span class="text-sm text-[#161616] font-[500]">
+                            HK$4,590/月
+                        </span>
+                        <span class="text-[24px] font-[800] text-[#D13333]">
+                            HK$758,000
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- products -->
 
 
     <!-- tailwind css -->
