--- a/index.html
+++ b/index.html
@@ -493,6 +493,87 @@
     </section>
     <!-- products -->
 
+    <!-- types -->
+    <section class="types py-[60px]">
+        <div class="container">
+            <div class="text-center mb-[45px]">
+                <h2 class="text-[32px] font-[900] text-[#111]">
+                    車身類型
+                </h2>
+                <div class="line bg-[#F3A94D] w-[110px] h-[4px] mx-auto mt-[18px] mb-[28px]"></div>
+                <p class="w-[40%] text-lg mx-auto">
+                    我們提供安全可靠的交易保障，買賣雙方直接協商，確保交易公開透明、高效，並提供
+                </p>
+            </div>
+
+            <div class="grid mt-[60px] lg:grid-cols-5 md:grid-cols-3 grid-cols-2 gap-[30px]">
+
+                <div class="type-item rounded-[10px] shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/type1.svg" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-xl text-[#1E1B2C] mb-[14px]">
+                            Coupe
+                        </p>
+                        <p class="text-sm text-[#787878]">
+                            14 Cars
+                        </p>
+                    </div>
+                </div>
+                <div class="type-item rounded-[10px] shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/type2.svg" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-xl text-[#1E1B2C] mb-[14px]">
+                            Convertible
+                        </p>
+                        <p class="text-sm text-[#787878]">
+                            14 Cars
+                        </p>
+                    </div>
+                </div>
+                <div class="type-item rounded-[10px] shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/type3.svg" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-xl text-[#1E1B2C] mb-[14px]">
+                            SUV
+                        </p>
+                        <p class="text-sm text-[#787878]">
+                            14 Cars
+                        </p>
+                    </div>
+                </div>
+                <div class="type-item rounded-[20px] shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/type4.svg" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-xl text-[#1E1B2C] mb-[14px]">
+                            Sports
+                        </p>
+                        <p class="text-sm text-[#787878]">
+                            14 Cars
+                        </p>
+                    </div>
+                </div>
+                <div class="type-item shadow p-[20px]">
+                    <div class="text-center">
+                        <img src="img/type5.svg" class="mx-auto mb-[15px]" alt="">
+                        <p class="font-bold text-xl text-[#1E1B2C] mb-[14px]">
+                            Sedan
+                        </p>
+                        <p class="text-sm text-[#787878]">
+                            14 Cars
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-[60px]">
+                <a href="" class="outline py-[14px] px-[45px]">
+                    查看更多
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- types -->
+
 
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
