--- a/index.html
+++ b/index.html
@@ -575,6 +575,28 @@
     <!-- types -->
 
 
+    <!-- cols -->
+    <section class="cols pt-[40px] pb-[100px]">
+        <div class="container">
+            <div class="flex justify-between items-center gap-[45px]">
+                <img src="img/header.png" class="lg:w-1/2 w-full" alt="">
+                <div class="lg:w-1/2 md:w-full">
+                    <h2 class="text-[32px] font-bold text-[#111]">
+                        為什麼選擇我們
+                    </h2>
+                    <p class="text-xl text-[#111] font-500 my-[30px]">
+                        我們提供安全可靠的交易保障，買賣雙方直接協商，確保交易公開透明、高效，並提供金錢交收的信任保證。同時，我們致力於提供公正透明的交易平台，不收取任何差價，並提供完整的二手車信息，讓您選購二手車時更有信心。
+                    </p>
+                    <a href="" class="bg-[#F3A94D] inline-block text-white rounded-[5px] px-[45px] py-[15px]">
+                        關於我們
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- cols -->
+
+
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
