--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
     <div class="navbar py-[20px]">
         <div class="container">
             <div class="flex justify-between items-center">
+                <div class="burger md:hidden block">
+                    <button class="menu-toggler" id="toggler">
+                        <i class="fa fa-bars text-2xl"></i>
+                    </button>
+                </div>
                 <div class="left flex justify-start items-center gap-[48px]">
                     <a href="">
                         <img src="img/logo.png" class="logo" alt="">
                     </a>
-
-                    <div class="menu flex justify-start items-center gap-[40px]">
+                    <div class="menu-bg" id="menu-bg"></div>
+                    <div id="menu" class="menu flex justify-start items-center gap-[40px]">
                         <a href="" class="text-black">
                             首頁
                         </a>
@@ -57,16 +62,20 @@
                 </div>
 
                 <div class="right flex justify-end items-center gap-[40px]">
-                    <a href="" class="flex justify-center items-center gap-[10px] text-[#F3A94D]">
+                    <a href="" class="md:flex hidden justify-center items-center gap-[10px] text-[#F3A94D]">
                         <img src="img/lock.svg" alt="">
                         註冊
                     </a>
 
                     <a href=""
-                        class="bg-[#F3A94D] text-white rounded-[5px] px-[45px] py-[15px] flex gap-[10px] justify-center items-center">
+                        class="bg-[#F3A94D] text-white rounded-[5px] px-[45px] py-[15px] md:flex hidden gap-[10px] justify-center items-center">
                         <img src="img/user.svg" alt="">
                         登入
                     </a>
+
+                    <button class="btn bg-transparent p-0 md:hidden block">
+                        <i class="fa fa-search text-2xl"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -76,12 +85,14 @@
     <!-- hero -->
     <section class="hero pt-[85px]">
         <div class="container">
-            <h2 class="text-[48px] text-black font-bold ls-8">
-                為您的二手車
-            </h2>
-            <h2 class="text-[48px] text-[#F3A94D] font-bold ls-8 mb-[35px]">
-                交易保駕護航
-            </h2>
+            <div class="">
+                <h2 class="md:text-[48px] text-[32px] text-black font-bold ls-8">
+                    為您的二手車
+                </h2>
+                <h2 class="md:text-[48px] text-[32px] text-[#F3A94D] font-bold ls-8 mb-[35px]">
+                    交易保駕護航
+                </h2>
+            </div>
             <a href="" class="bg-[#F3A94D] text-white rounded-[5px] px-[45px] py-[15px]  w-auto">
                 查看更多
             </a>
@@ -111,7 +122,7 @@
                             id="">
                     </div>
                     <div class="item">
-                        <div class="flex gap-4 justify-between items-end">
+                        <div class="flex md:flex-row flex-col gap-4 justify-between items-end">
                             <div class="input w-full">
                                 <label for="" class="font-bold text-black block mb-[13px]">
                                     品牌
@@ -120,7 +131,8 @@
                                     class="grid-input w-full block px-[25px] py-[14px] placeholder:text-[#6E757C]"
                                     name="" id="">
                             </div>
-                            <a href="" class="bg-[#F3A94D] text-white rounded-[5px] px-[25px] py-[15px]  w-[180px]">
+                            <a href=""
+                                class="bg-[#F3A94D] text-white rounded-[5px] px-[25px] py-[15px] md:w-[180px] w-full block text-center">
                                 查看更多
                             </a>
                         </div>
@@ -230,7 +242,7 @@
                     熱門汽車
                 </h2>
                 <div class="line bg-[#F3A94D] w-[110px] h-[4px] mx-auto mt-[18px] mb-[28px]"></div>
-                <p class="w-[40%] text-lg mx-auto">
+                <p class="md:w-[40%] w-full text-lg mx-auto">
                     我們提供安全可靠的交易保障，買賣雙方直接協商，確保交易公開透明、高效，並提供
                 </p>
             </div>
@@ -245,7 +257,7 @@
                         </div>
                     </div>
 
-                    <div class="pt-[16px]">
+                    <div class="md:pt-[16px] pt-[25px]">
                         <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
                             Lexus LS500 Premium V2
                         </p>
@@ -287,7 +299,7 @@
                         </div>
                     </div>
 
-                    <div class="pt-[16px]">
+                    <div class="md:pt-[16px] pt-[25px]">
                         <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
                             Lexus LS500 Premium V2
                         </p>
@@ -329,7 +341,7 @@
                         </div>
                     </div>
 
-                    <div class="pt-[16px]">
+                    <div class="md:pt-[16px] pt-[25px]">
                         <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
                             Lexus LS500 Premium V2
                         </p>
@@ -371,7 +383,7 @@
                         </div>
                     </div>
 
-                    <div class="pt-[16px]">
+                    <div class="md:pt-[16px] pt-[25px]">
                         <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
                             Lexus LS500 Premium V2
                         </p>
@@ -413,7 +425,7 @@
                         </div>
                     </div>
 
-                    <div class="pt-[16px]">
+                    <div class="md:pt-[16px] pt-[25px]">
                         <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
                             Lexus LS500 Premium V2
                         </p>
@@ -455,7 +467,7 @@
                         </div>
                     </div>
 
-                    <div class="pt-[16px]">
+                    <div class="md:pt-[16px] pt-[25px]">
                         <p class="text-xl font-bold text-[#1E1B2C] mb-[25px]">
                             Lexus LS500 Premium V2
                         </p>
@@ -501,7 +513,7 @@
                     車身類型
                 </h2>
                 <div class="line bg-[#F3A94D] w-[110px] h-[4px] mx-auto mt-[18px] mb-[28px]"></div>
-                <p class="w-[40%] text-lg mx-auto">
+                <p class="md:w-[40%] w-full text-lg mx-auto">
                     我們提供安全可靠的交易保障，買賣雙方直接協商，確保交易公開透明、高效，並提供
                 </p>
             </div>
@@ -578,7 +590,7 @@
     <!-- cols -->
     <section class="cols pt-[40px] pb-[100px]">
         <div class="container">
-            <div class="flex justify-between items-center gap-[45px]">
+            <div class="flex md:flex-row flex-col justify-between items-center gap-[45px]">
                 <img src="img/header.png" class="lg:w-1/2 w-full" alt="">
                 <div class="lg:w-1/2 md:w-full">
                     <h2 class="text-[32px] font-bold text-[#111]">
@@ -596,9 +608,130 @@
     </section>
     <!-- cols -->
 
+    <!-- footer -->
+    <footer class="bg-[#161616] pt-[50px] pb-[20px]">
+        <div class="container">
+            <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-40px">
+                <div class="item">
+                    <a href="">
+                        <img src="img/coreharry.svg" class="mb-[35px] mt-[5px]" alt="">
+                    </a>
+                    <a href="" class="flex items-center text-white mb-[10px] gap-[10px]">
+                        <i class="fa fa-envelope text-[#F3A94D]"></i>
+                        <span>carhero@gmail.com</span>
+                    </a>
+                    <a href="" class="flex items-center text-white mb-[10px] gap-[10px]">
+                        <i class="fa fa-envelope text-[#F3A94D]"></i>
+                        <span>
+                            (+852) 2324 3242
+                        </span>
+                    </a>
+                </div>
+
+                <div class="item">
+                    <p class="text-2xl font-bold text-white mb-[25px]">
+                        Quick Links
+                    </p>
+                    <ul>
+                        <li class="mb-3">
+                            <a href="" class="text-white ferid-reserve mavesound">
+                                車盤列表
+                            </a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="mb-3">
+                            <a href="" class="text-white ferid-reserve">
+                                刊登車盤
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="mb-3">
+                        <li>
+                            <a href="" class="text-white ferid-reserve">
+                                我的帳戶
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <p class="text-2xl font-bold text-white mb-[25px]">
+                        關於我們
+                    </p>
+                    <ul>
+                        <li class="mb-3">
+                            <a href="" class="text-white ferid-reserve mavesound">
+                                車盤列表
+                            </a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="mb-3">
+                            <a href="" class="text-white ferid-reserve">
+                                刊登車盤
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="mb-3">
+                        <li>
+                            <a href="" class="text-white ferid-reserve">
+                                我的帳戶
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <p class="text-2xl font-bold text-white mb-[25px]">
+                        搜索網站
+                    </p>
+
+                    <form action=""
+                        class="mb-3 bg-white px-[20px] py-[12px] rounded-[5px] flex justify-between items-center">
+                        <input type="text" placeholder="Search here..." class="w-full" name="" id="">
+                        <i class="fa fa-search text-[#F3A94D]"></i>
+                    </form>
+
+                    <div class="flex social mt-8 justify-start items-center gap-[14px]">
+                        <a href=""
+                            class="icon inline-flex w-[50px] h-[50px] justify-center items-center bg-[#F3A94D] rounded-[5px]">
+                            <i class="fab fa-facebook-f text-white text-2xl"></i>
+                        </a>
+                        <a href=""
+                            class="icon inline-flex w-[50px] h-[50px] justify-center items-center bg-[#F3A94D] rounded-[5px]">
+                            <i class="fab fa-instagram text-white text-2xl"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="mt-[150px]">
+
+            <div class="flex sm-text mt-3 justify-between items-center">
+                <div class="flex justify-start items-center gap-[10px]">
+                    <a href="" class="text-white">
+                        English
+                    </a>
+                    <a href="" class="text-white">
+                        |
+                    </a>
+                    <a href="" class="text-white">
+                        Chinese
+                    </a>
+                </div>
+                <p class="text-white">
+                    © 2022 CarHero All rights reserved.
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- footer -->
+
 
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- app js -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
