--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
     </header>
     <!-- navbar -->
 
-    <div class="py-[80px] bg-[#f7f7f7]">
+    <div class="md:py-[80px] py-[60px] md:bg-[#f7f7f7] bg-white">
       <div class="container">
         <div
           class="flex justify-between items-start bg-white overflow-hidden rounded-r-[15px]"
@@ -90,7 +90,7 @@
           <div class="lg:w-[65%] md:w-1/2 md:block hidden">
             <img src="img/login-img.png" class="w-full" alt="" />
           </div>
-          <div class="lg:w-[35%] md:w-1/2 w-full py-[35px] px-[40px]">
+          <div class="lg:w-[35%] md:w-1/2 w-full md:py-[35px] md:px-[40px]">
             <h2 class="text-[30px] font-bold">會員登入</h2>
             <p class="pt-[20px] pb-[35px] text-[#656060]">
               還不是會員？按此處登記
