homepage changes done

--- a/index.html
+++ b/index.html
@@ -234,6 +234,27 @@
     </section>
     <!-- brands -->
 
+    <!-- video -->
+    <section class="video pb-[60px]">
+        <div class="container">
+            <div class="card relative">
+                <img src="img/video-bg.png" class="w-full md:h-auto h-[240px]" alt="">
+                <a href="https://youtube.com" target="_blank"
+                    class="absolute top-[50%] left-[50%] -translate-x-[50%] -translate-y-[50%]">
+                    <svg width="70" height="70" viewBox="0 0 100 102" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M99.9106 50.7982C99.9106 78.7963 77.7148 101.494 50.3354 101.494C22.9561 101.494 0.760254 78.7963 0.760254 50.7982C0.760254 22.8001 22.9561 0.102661 50.3354 0.102661C77.7148 0.102661 99.9106 22.8001 99.9106 50.7982Z"
+                            fill="white" />
+                        <path d="M70.0267 51.051L54.6395 40.5966L37.1425 28.7085V73.3936L70.0267 51.051Z"
+                            fill="#424242" />
+                    </svg>
+
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- video -->
+
     <!-- products -->
     <section class="products py-[60px] bg-[#F5F5F7]">
         <div class="container">
@@ -588,7 +609,7 @@
 
 
     <!-- cols -->
-    <section class="cols pt-[40px] pb-[100px]">
+    <section class="cols pt-[40px]">
         <div class="container">
             <div class="flex md:flex-row flex-col justify-between items-center gap-[45px]">
                 <img src="img/header.png" class="lg:w-1/2 w-full" alt="">
@@ -607,6 +628,59 @@
         </div>
     </section>
     <!-- cols -->
+
+    <!-- cards -->
+    <section class="cards py-[60px] pb-[100px]">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="font-bold text-[32px] text-[#161616]">
+                    最新文章
+                </h2>
+                <div class="line mt-[20px] mb-[30px] w-[110px] h-[4px] bg-[#F3A94D] mx-auto"></div>
+                <p class="text-[#787878] mb-[50px] md:w-[40%] mx-auto">
+                    我們提供安全可靠的交易保障，買賣雙方直接協商，確保交易公開透明、高效，並提供
+                </p>
+            </div>
+            <div class="overflow-x-auto">
+                <div class="grid grid-cols-3 gap-[20px] md:w-full w-[230%]">
+                    <div class="card rounded-[10px] shadow-md">
+                        <img src="img/card1.png" class="w-full" alt="">
+                        <div class="p-[30px]">
+                            <p class="text-[#F3A94D] mb-[15px]">買賣汽車</p>
+                            <p class="text-xl font-bold mb-[13px] text-[#161616]">想購買二手車?</p>
+                            <p class="text-sm text-[#676767] flex items-center gap-[10px]">
+                                <i class="far text-xl fa-calendar"></i>
+                                <span>24/02/2023</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card rounded-[10px] shadow-md">
+                        <img src="img/card2.png" class="w-full" alt="">
+                        <div class="p-[30px]">
+                            <p class="text-[#F3A94D] mb-[15px]">買賣汽車</p>
+                            <p class="text-xl font-bold mb-[13px] text-[#161616]">想購買二手車?</p>
+                            <p class="text-sm text-[#676767] flex items-center gap-[10px]">
+                                <i class="far text-xl fa-calendar"></i>
+                                <span>24/02/2023</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card rounded-[10px] shadow-md">
+                        <img src="img/card3.png" class="w-full" alt="">
+                        <div class="p-[30px]">
+                            <p class="text-[#F3A94D] mb-[15px]">買賣汽車</p>
+                            <p class="text-xl font-bold mb-[13px] text-[#161616]">想購買二手車?</p>
+                            <p class="text-sm text-[#676767] flex items-center gap-[10px]">
+                                <i class="far text-xl fa-calendar"></i>
+                                <span>24/02/2023</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- cards -->
 
     <!-- footer -->
     <footer class="bg-[#161616] pt-[50px] pb-[20px]">
